# setmlvis

./: .coveragerc  .eslintignore  .gitignore  MANIFEST.in  README.md  codecov.yml  install.json  package-lock.json  package.json  pyproject.toml  pytest.ini  setmlvis.json  tsconfig.json  webpack.config.js
.github/workflows/: deploy.yml
docs/: .gitignore  environment.yml  make.bat  package.json
docs/docs/: index.md
docs/docs/.vitepress/: config.js
docs/docs/.vitepress/theme/: custom.css
docs/docs/guide/: index.md
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst  release.rst
examples/: Untitled.ipynb  drone-projected.ipynb  drone.ipynb  fiveImages.json  introduction.ipynb  satellite.ipynb  twentyFiveImagesv2.json  twoModels.ipynb
setmlvis/: __init__.py  _frontend.py  _version.py  createSetJson.py  example.py  widget.py
setmlvis/nbextension/: extension.js  index (MacBook-Pro's conflicted copy 2024-01-07).js
src/: Widget.svelte  extension.ts  index.ts  menu.json  plugin.ts  stores.ts  types.ts  ulit.ts  version.ts  widget.ts
src/assets/: checked-minus.svelte  checked.svelte  down-arrow.svelte  duplicate.svelte  far-away.svelte  low-threshold-normal.svelte  minus.svelte  plus.svelte  sort-down.svelte  sort-up.svelte  unchecked.svelte  up-arrow.svelte  wrong-class.svelte
src/components/: Collection.svelte  DetailView.svelte  Menu.svelte  SetVis.svelte  Widget.svelte  collectionSlider.css
src/components/detail/: Accordion.svelte  CheckAccordion.svelte  Labels.svelte  RightPanel.svelte
src/components/menuComp/: DoubleSlider.svelte  Group.svelte  Slider.svelte  checkbox.svelte
src/components/vis/: ColorLegend.svelte  DrawTextbox.svelte  DrawThumbnail.svelte  Tooltip.svelte  VisButton.svelte  VisToggle.svelte  setColumn.svelte
