[build-system]
requires = [
    "hatchling>=1.3.1",
    "jupyterlab==3.*",
]
build-backend = "hatchling.build"

[project]
name = "setmlvis"
description = "A new visualization method for comparing different models for bounding box detection."
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.7"
authors = [
    { name = "Tarik Crnovrsanin", email = "turokhunter@gmail.com" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "ipywidgets>=7.0.0",
    "shapely>=2.0.1",
    "Pillow>=9.5",
    "rtree>=1.1.0",
]
version = "0.2.8"

[project.optional-dependencies]
docs = [
    "jupyter_sphinx",
    "nbsphinx",
    "nbsphinx-link",
    "pypandoc",
    "pytest_check_links",
    "recommonmark",
    "sphinx>=1.5",
    "sphinx_rtd_theme",
]
examples = []
test = [
    "nbval",
    "pytest-cov",
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/VisDunneRight/setmlvis"

[tool.hatch.build]
artifacts = [
    "setmlvis/nbextension/index.*",
    "setmlvis/labextension/*.tgz",
    "setmlvis/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"setmlvis/nbextension" = "share/jupyter/nbextensions/setmlvis"
"setmlvis/labextension" = "share/jupyter/labextensions/setmlvis"
"./install.json" = "share/jupyter/labextensions/setmlvis/install.json"
"./setmlvis.json" = "etc/jupyter/nbconfig/notebook.d/setmlvis.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "setmlvis/nbextension/index.js",
    "setmlvis/labextension/package.json",
]
skip-if-exists = [
    "setmlvis/nbextension/index.js",
    "setmlvis/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0"
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]
file = [
    { src = "pyproject.toml", version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\"" },
    { src = "setmlvis/_version.py" },
]

[tool.tbump.version]
current = "0.2.7"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"
